# word-runner

./: '  2  Cargo.toml  README.md  \  test.epub
.config/: 90631d5a-3536-46d4-a361-e9b133aaa53d
src/: document.rs  main.rs  reader.rs
src/document/: epub.rs  mod.rs
~/.config/word-runner/: 90631d5a-3536-46d4-a361-e9b133aaa53d
