[package]
name = "word-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
html2text = "0.4.4"
epub = "1.2.4"
anyhow = "1.0.66"
assert2 = "0.3.7"
rstest = "0.18.2"
clap = { version = "4.4.8", features = ["derive"] }
