[package]
name = "word-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
html2text = "0.6.0"
epub = "2.1.1"
anyhow = "1.0.66"
assert2 = "0.3.7"
rstest = "0.18.2"
clap = { version = "4.4.8", features = ["derive"] }
tui-tree-widget = "0.15.0"
ratatui = "0.24.0"
itertools = "0.12.0"
